--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "NODE_ENV=production node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-useragent": "^1.0.13",
+    "mongodb": "^3.5.7",
     "mongoose": "^5.8.3",
     "morgan": "~1.9.1",
     "tinyurl": "^1.1.5"
